--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
-    "next": "^15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "^5.0.1",
     "react-transition-group": "^4.4.5",
+    "recharts": "^2.15.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "web-vitals": "^2.1.4"
